Fixed footer overlapping main content issue, aboutUs page changes

--- a/react-client/src/Components/AboutComponent/AboutUsPage.css
+++ b/react-client/src/Components/AboutComponent/AboutUsPage.css
@@ -1,9 +1,21 @@
 /* ************** ABOUT US ************** */
 #about-us {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-grow: 1;
+  flex: 1;
 }
 
-#about-us-content {
+.aboutTitle {
+  display: flex;
+  justify-content: center;
+  font-size: 34px;
+}
+
+#aboutUsContent {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -14,7 +26,7 @@
   padding-right: 10%;
 }
 
-#about-us-content div {
+#mission {
   background: rgba(0, 0, 0, 0)
   radial-gradient(at left top, rgb(228, 115, 45) 0%,
   rgb(228, 45, 66) 100%) repeat scroll 0% 0%;
@@ -22,10 +34,8 @@
   width: 100%;
   /*min-height: 16rem;*/
   max-width: 100%;
-  max-height: 10%;
   position: relative;
   border-radius: 8px;
-  overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.063) 0px 8px 32px;
   box-sizing: border-box;
 }
@@ -42,5 +52,4 @@
   margin: 0 auto;
   width: 10px;
   height: 10px;
-  display: block;
 }
