--- a/react-client/src/Components/FooterComponent/Footer.css
+++ b/react-client/src/Components/FooterComponent/Footer.css
@@ -12,7 +12,6 @@
   color: white;
   text-align: center;
   overflow: auto;
-  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
